--- a/components/tracker/default.htm
+++ b/components/tracker/default.htm
@@ -1,16 +1,8 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ __SELF__.trackingId }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ __SELF__.measurementId }}"></script>
 <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-{% if __SELF__.domainName %}
-    gtag('set', { 'cookie_domain': '{{ __SELF__.domainName }}' });
-{% endif %}
-{% if __SELF__.forceSSL %}
-    gtag('set', { 'force_ssl': true });
-{% endif %}
-{% if __SELF__.anonymizeIp %}
-    gtag('set', { 'anonymize_ip': true });
-{% endif %}
-    gtag('config', '{{ __SELF__.trackingId }}');
+window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', '{{ __SELF__.measurementId }}');
 </script>
