--- a/reportwidgets/jsevents/partials/_widget.htm
+++ b/reportwidgets/jsevents/partials/_widget.htm
@@ -6,10 +6,10 @@
             <table class="table data" data-control="rowlink">
                 <thead>
                     <tr>
-                        <th><span>Type of Error</span></th>
-                        <th><span>Error Description</span></th>
-                        <th><span>Error Location</span></th>
-                        <th><span>% of all events</span></th>
+                        <th><span><?= e(trans('google.ga4::lang.widgets.jsevents1')) ?></span></th>
+                        <th><span><?= e(trans('google.ga4::lang.widgets.jsevents2')) ?></span></th>
+                        <th><span><?= e(trans('google.ga4::lang.widgets.jsevents3')) ?></span></th>
+                        <th><span><?= e(trans('google.ga4::lang.widgets.jsevents4')) ?></span></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -30,7 +30,7 @@
                     <?php endforeach ?>
                     <?php if (!count($rows)): ?>
                         <tr>
-                            <td colspan="3">There were no events in the selected interval.</td>
+                            <td colspan="3"><?= e(trans('google.ga4::lang.widgets.jsevents5')) ?></td>
                         </tr>
                     <?php endif ?>
                 </tbody>
