--- a/reportwidgets/trafficsources/partials/_widget.htm
+++ b/reportwidgets/trafficsources/partials/_widget.htm
@@ -22,6 +22,6 @@
     <?php endif ?>
 
     <?php if ($this->property('displayDescription')): ?>
-        <p class="report-description"><?= e(trans('rainlab.googleanalytics::lang.widgets.description_traffic_sources')) ?></p>
+        <p class="report-description"><?= e(trans('google.ga4::lang.widgets.description_traffic_sources')) ?></p>
     <?php endif ?>
 </div>
