--- a/components/gaamptracker/default.htm
+++ b/components/gaamptracker/default.htm
@@ -1,5 +1,5 @@
 {% if __SELF__.measurementId is not empty %}
-<amp-analytics type="gtag" data-credentials="include">
+<amp-analytics data-block-on-consent type="gtag" data-credentials="include">
     <script type="application/json">
     {
         "vars" : {
